8295976: GetThreadListStackTraces returns wrong state for blocked VirtualThread